# mandarin

./: .gitmodules  CMakeLists.txt
data/: db.json  package_managers.json
data/package_managers/: apt-get.json  pacman.json  yaourt.json
executable/: main.cpp
include/mandarin/: mandarin.h  package.h  package_manager.h
src/: mandarin.cpp  package.cpp  package_manager.cpp
